[package]
name = "zncat"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
eyre = "0.6.12"
futures = "0.3.31"
serde_json = "1.0.132"
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["io-std", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.16", features = ["io-util"] }
tracing = "0.1.40"
zenoh = "1.0.0"
