[package]
name = "zncat"
version = "0.2.0"
edition = "2021"
authors = ["Lin, Hiang-Jui <jerry73204@gmail.com>"]
description = "Command line relay for Zenoh"
readme = "README.md"
repository = "https://github.com/NEWSLabNTU/zncat.git"
homepage = "https://github.com/NEWSLabNTU/zncat"
license = "Apache-2.0"
categories = ["network-programming"]

[dependencies]
atty = "0.2.14"
clap = { version = "4.5.20", features = ["derive"] }
eyre = "0.6.12"
futures = "0.3.31"
serde_json = "1.0.132"
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["io-std", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.16", features = ["io-util"] }
tracing = "0.1.40"
zenoh = { version = "1.0.0", features = ["unstable"] }

[features]
shared-memory = ["zenoh/shared-memory"]
